[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Jungminchae <minchae3618@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
